<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:padding="10dp"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="11"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/Item_Date"
                android:textSize="16dp"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/item_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:text="@string/Item_Date_dummyValue"
                android:textSize="16dp"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/Item_Type"
                android:textSize="16dp"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/item_note_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:textSize="16dp"
                android:text="@string/Item_Type_dummyValue"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/Item_title"
                android:textSize="16dp"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/item_note_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:text="@string/Item_title_dummyValue"
                android:textSize="16dp"
                android:gravity="center_vertical"/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010422"
            android:textStyle="bold|italic"
            android:text="@string/Item_check_string"/>
        <CheckBox
            android:id="@+id/item_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>