<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/UpdateMainLinearLayout"
    tools:context=".UpdateReminderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Reminder_date" />

                <TextView
                    android:id="@+id/UpdateDateText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/Date_Format" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border_note"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/Reminder_finish_date" />

                    <TextView
                        android:id="@+id/UpdateFinishDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:hint="@string/Date_Format" />

                    <Button
                        android:id="@+id/UpdateFinishDateButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@drawable/shape_blue"
                        android:text="@string/Add_Date_Button" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border_note"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Reminder_Type" />

                    <Spinner
                        android:id="@+id/UpdateSpinnerType"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border_note"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Reminder_Color" />

                    <Spinner
                        android:id="@+id/UpdateSpinnerColor"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border_note"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Reminder_Ringtone"
                        />

                    <Spinner
                        android:id="@+id/UpdateSpinnerRingTone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/UpdateLinearLayoutFrequency"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border_note"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/Reminder_Frequency" />

                    <Spinner
                        android:id="@+id/UpdateSpinnerFrequency"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:text="@string/Reminder_Time" />

                    <EditText
                        android:id="@+id/UpdateCheckboxAlarmHour"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:hint="@string/Reminder_Hint_Hour"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/UpdateCheckboxAlarmMinute"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:hint="@string/Reminder_Hint_Minute"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/UpdateTimeButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@drawable/shape_blue"
                        android:text="@string/Add_time_Button" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border_note"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/UpdateCheckboxAlarm"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/Reminder_Alarm" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/UpdateLinearLayoutRemindBefore"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border_note"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/UpdateCheckboxBefore"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:text="@string/Reminder_Before" />

                    <EditText
                        android:id="@+id/UpdateCheckboxBeforeHour"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:hint="@string/Reminder_Hint_Hour"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/UpdateCheckboxBeforeMinute"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:hint="@string/Reminder_Hint_Minute"
                        android:inputType="number" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/UpdateLayoutNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/border_note"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Reminder_title"
                        android:gravity="center"/>
                    <EditText
                        android:id="@+id/UpdateReminderTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/Reminder_body_title"
                        android:gravity="center"/>
                    <EditText
                        android:id="@+id/UpdateReminderBody"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:background="@drawable/border_note"
                        android:gravity="start" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>